# Simple-Raytracer

./: .gitignore  CMakeLists.txt  README.md
images/: AAImage.ppm  CameraTest.ppm  CameraTransform.ppm  CameraTransform02.ppm  Diffused-Sphere.ppm  Diffused-Sphere02.ppm  Diffused-Sphere03.ppm  DoF.ppm  FinalRender.ppm  FovTest.ppm  Glass.ppm  Glass02.ppm  GlassFull.ppm  Lambertian-Sphere-gamma-correction.ppm  Lambertian-Sphere.ppm  MetalSpheres.ppm  MetalSpheresWithFuzz.ppm  init_image.ppm
include/: camera.h  color.h  global.h  hittable-list.h  interval.h  material.h  object.h  ray.h  render_object.h  sphere.h  vec3.h
src/: camera.cc  main.cc  sphere.cc
